Checking the branching operation

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-##This is an application developed with zend framework. Enjoy !! 
+## checking branching operation This is an application developed with zend framework. Enjoy !! 
