Checking the commit of 2 files together

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-## checking branching operation This is an application developed with zend framework. Enjoy !! 
+##checking the commit operation  checking branching operation This is an application developed with zend framework. Enjoy !! 
